Use Core Text to render fonts on the Mac.
Makes fonts look more platform-native and is a prerequisite for .dfont support,
which is needed to render Helvetica.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,8 @@ fnv="*"
 scoped_threadpool = "0.1.6"
 app_units = "0.1"
 simd = { git = "https://github.com/huonw/simd" }
+
+[target.x86_64-apple-darwin.dependencies]
+core-graphics = "*"
+core-text = "*"
+
