Reuse batches across paints on a per-node basis.
This didn't really improve performance from what I saw, but it's a
cleaner and more general optimization than the one we had previously,
which only reused batches if the entire display list didn't change. In
any case, it's a precursor to more aggressive optimizations we could do
to reuse portions of batches within AABB tree nodes.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ serde_macros = "0.5"
 fnv="*"
 scoped_threadpool = "0.1.6"
 app_units = "0.1"
+log = "*"
 simd = { git = "https://github.com/huonw/simd" }
 
 [target.x86_64-apple-darwin.dependencies]
