--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ time = "*"
 fnv="*"
 scoped_threadpool = "0.1.6"
 app_units = "0.1"
+lazy_static = "0.1"
 simd = { git = "https://github.com/huonw/simd" }
 
 [target.x86_64-apple-darwin.dependencies]
