Add WebGL support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,10 @@ git = "https://github.com/servo/ipc-channel"
 [dependencies.webrender_traits]
 git = "https://github.com/glennw/webrender_traits"
 
+[dependencies.offscreen_gl_context]
+git = "https://github.com/ecoal95/rust-offscreen-rendering-context"
+branch = "webrender"
+
 [dependencies]
 gleam = "*"
 euclid = "0.3"
