--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "webrender"
 version = "0.1.0"
 authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
 
-[dependencies.freetype]
+[target.x86_64-unknown-linux-gnueabihf.dependencies.freetype]
 git = "https://github.com/servo/rust-freetype"
 
 [dependencies.ipc-channel]
