--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ git = "https://github.com/servo/rust-freetype"
 git = "https://github.com/servo/rust-freetype"
 
 [dependencies.ipc-channel]
-git = "https://github.com/pcwalton/ipc-channel"
+git = "https://github.com/servo/ipc-channel"
 
 [dependencies.webrender_traits]
 git = "https://github.com/glennw/webrender_traits"
