--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,13 @@ git = "https://github.com/servo/rust-freetype"
 [target.x86_64-unknown-linux-gnu.dependencies.freetype]
 git = "https://github.com/servo/rust-freetype"
 
+[target.arm-linux-androideabi.dependencies.freetype]
+git = "https://github.com/servo/rust-freetype"
+
 [target.arm-unknown-linux-gnueabihf.dependencies.freetype]
+git = "https://github.com/servo/rust-freetype"
+
+[target.aarch64-unknown-linux-gnu.dependencies.freetype]
 git = "https://github.com/servo/rust-freetype"
 
 [dependencies.ipc-channel]
