--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ branch = "webrender"
 
 [dependencies]
 gleam = "*"
-euclid = "0.3"
+euclid = {version = "0.4", features = ["plugins"]}
 time = "*"
 fnv="*"
 scoped_threadpool = "0.1.6"
