--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ git = "https://github.com/ecoal95/rust-offscreen-rendering-context"
 branch = "webrender"
 
 [dependencies]
-gleam = "*"
+gleam = "0.2"
 euclid = {version = "0.4", features = ["plugins"]}
 time = "*"
 fnv="*"
