Sync core-graphics/core-text versions with Servo
Bumping these versions allows compilation with Servo HEAD

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,8 +37,6 @@ scoped_threadpool = "0.1.6"
 app_units = "0.1"
 lazy_static = "0.1"
 
-[target.x86_64-apple-darwin.dependencies.core-text]
-git = "https://github.com/servo/core-text-rs"
-
 [target.x86_64-apple-darwin.dependencies]
-core-graphics = "0.1"
+core-graphics = "0.2"
+core-text = "1.0"
