--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ git = "https://github.com/ecoal95/rust-offscreen-rendering-context"
 git = "https://github.com/servo/ipc-channel"
 
 [dependencies]
-app_units = "0.1"
+app_units = {version = "0.2", features = ["plugins"]}
 euclid = {version = "0.4", features = ["plugins"]}
 gleam = "0.2"
 serde = "0.6"
