--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ branch = "inotify-modify"
 [dependencies]
 gleam = "0.2"
 euclid = {version = "0.6.1", features = ["plugins"]}
+num = {version = "0.1.24", default-features = false}
 time = "*"
 fnv="*"
 scoped_threadpool = "0.1.6"
