Temporarily disable file watcher support for shader reloads.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,9 @@ git = "https://github.com/glennw/webrender_traits"
 [dependencies.offscreen_gl_context]
 git = "https://github.com/ecoal95/rust-offscreen-rendering-context"
 
-[dependencies.notify]
-git = "https://github.com/glennw/rsnotify.git"
-branch = "inotify-modify"
+#[dependencies.notify]
+#git = "https://github.com/glennw/rsnotify.git"
+#branch = "inotify-modify"
 
 [dependencies]
 gleam = "0.2"
