--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,4 @@ serde = {version = "0.6", features = ["nightly"]}
 serde_macros = "0.6"
 
 [target.x86_64-apple-darwin.dependencies]
-core-graphics = "*"
+core-graphics = "0.2"
