--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,8 +35,8 @@ git = "https://github.com/ecoal95/rust-offscreen-rendering-context"
 gleam = "0.2"
 euclid = {version = "0.6.2", features = ["plugins"]}
 num = {version = "0.1.24", default-features = false}
-time = "*"
-fnv="*"
+time = "0.1"
+fnv="1.0"
 scoped_threadpool = "0.1.6"
 app_units = {version = "0.2.1", features = ["plugins"]}
 lazy_static = "0.1"
