--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: rust
 os:
   - linux
   - osx
-rust: nightly
+rust: nightly-2016-02-22
 notifications:
   webhooks: http://build.servo.org:54856/travis
 addons:
