--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ git = "https://github.com/servo/ipc-channel"
 app_units = {version = "0.2.1", features = ["plugins"]}
 euclid = {version = "0.6.2", features = ["plugins"]}
 gleam = "0.2"
-serde = {version = "0.6", features = ["nightly"]}
-serde_macros = "0.6"
+serde = {version = ">=0.6, <0.8", features = ["nightly"]}
+serde_macros = ">=0.6, <0.8"
 
 [target.x86_64-apple-darwin.dependencies]
-core-graphics = "0.2"
+core-graphics = ">=0.2, <0.4"
