--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: rust
-rust: nightly
+rust:
+  - nightly
+  - nightly-2016-03-07 # Should be kept in sync with Servo.
+matrix:
+  allow_failures:
+    - rust: nightly
 notifications:
   webhooks: http://build.servo.org:54856/travis
 addons:
