--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ fnv="1.0"
 scoped_threadpool = "0.1.6"
 app_units = {version = "0.2.1", features = ["plugins"]}
 lazy_static = "0.1"
+log = "0.3"
 
 [target.x86_64-apple-darwin.dependencies]
 core-graphics = ">=0.2, <0.4"
