--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ euclid = {version = "0.6.2", features = ["plugins"]}
 gleam = "0.2"
 serde = {version = ">=0.6, <0.8", features = ["nightly"]}
 serde_macros = ">=0.6, <0.8"
+byteorder = "0.5"
 
 [target.x86_64-apple-darwin.dependencies]
 core-graphics = ">=0.2, <0.4"
