--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ scoped_threadpool = "0.1.6"
 app_units = {version = "0.2.1", features = ["plugins"]}
 lazy_static = "0.1"
 log = "0.3"
+byteorder = "0.5"
 
 [target.x86_64-apple-darwin.dependencies]
 core-graphics = ">=0.2, <0.4"
