--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,14 @@ language: rust
 rust:
   - nightly
   - nightly-2016-04-11 # Should be kept in sync with Servo.
+
 matrix:
   allow_failures:
     - rust: nightly
+
 notifications:
   webhooks: http://build.servo.org:54856/travis
+
 addons:
   apt:
     packages:
@@ -14,3 +17,11 @@ addons:
 os:
   - linux
   - osx
+
+before_script:
+    - export PATH=$HOME/.local/bin:/Users/travis/Library/Python/2.7/bin:$PATH
+    - pip install servo_tidy --user `whoami`
+
+script:
+    - servo-tidy
+
