--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ os:
   - linux
   - osx
 rust:
-  - nightly
+  - nightly-2016-06-08
 notifications:
   webhooks: http://build.servo.org:54856/travis
 addons:
