--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ time = "0.1"
 webrender_traits = {git = "https://github.com/servo/webrender_traits", default-features = false}
 
 [target.'cfg(any(target_os = "android", target_os = "linux", target_os = "windows"))'.dependencies]
-freetype = {git = "https://github.com/servo/rust-freetype"}
+freetype-sys = "0.4.0"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 core-graphics = ">=0.2, <0.4"
