--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,5 +11,7 @@ install:
 build: false
 
 test_script:
-  - cd webrender
+  - cd webrender_traits
+  - cargo test --verbose
+  - cd ../webrender
   - cargo test --verbose
