--- a/webrender_traits/Cargo.toml
+++ b/webrender_traits/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "webrender_traits"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
+license = "MPL-2.0"
+repository = "https://github.com/servo/webrender"
 build = "build.rs"
 
 [features]
