Update to euclid 0.9

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "webrender"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
 
 [features]
@@ -8,18 +8,18 @@ default = ["webrender_traits/serde_codegen"]
 serde_macros = ["webrender_traits/serde_macros"]
 
 [dependencies]
-app_units = "0.2.5"
+app_units = "0.3"
 bit-set = "0.4"
 byteorder = "0.5"
-euclid = "0.8"
+euclid = "0.9"
 fnv="1.0"
 gleam = "0.2"
-ipc-channel = "0.4.0"
+ipc-channel = "0.5"
 lazy_static = "0.2"
 log = "0.3"
 #notify = {git = "https://github.com/glennw/rsnotify.git", branch = "inotify-modify"}
 num-traits = "0.1.32"
-offscreen_gl_context = {version = "0.2.0", features = ["serde_serialization"]}
+offscreen_gl_context = {version = "0.3", features = ["serde_serialization"]}
 scoped_threadpool = "0.1.6"
 time = "0.1"
 webrender_traits = {git = "https://github.com/servo/webrender_traits", default-features = false}
@@ -28,5 +28,5 @@ webrender_traits = {git = "https://github.com/servo/webrender_traits", default-f
 freetype = {git = "https://github.com/servo/rust-freetype"}
 
 [target.'cfg(target_os = "macos")'.dependencies]
-core-graphics = ">=0.2, <0.4"
-core-text = "1.0"
+core-graphics = "0.4"
+core-text = "2.0"
