updated recording branch

--- a/webrender/Cargo.toml
+++ b/webrender/Cargo.toml
@@ -11,6 +11,7 @@ serde_macros = ["webrender_traits/serde_macros"]
 
 [dependencies]
 app_units = "0.3"
+bincode = "0.6.0"
 bit-set = "0.4"
 byteorder = "0.5"
 euclid = "0.9"
