--- a/webrender/Cargo.toml
+++ b/webrender/Cargo.toml
@@ -21,7 +21,7 @@ ipc-channel = "0.5"
 lazy_static = "0.2"
 log = "0.3"
 num-traits = "0.1.32"
-offscreen_gl_context = {version = "0.4", features = ["serde_serialization"]}
+offscreen_gl_context = {version = "0.4", features = ["serde_serialization", "osmesa"]}
 rayon = "0.4.0"
 time = "0.1"
 webrender_traits = {path = "../webrender_traits", default-features = false}
