Switch to serde_derive

--- a/webrender_traits/Cargo.toml
+++ b/webrender_traits/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "webrender_traits"
-version = "0.5.1"
+version = "0.6.0"
 authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
 license = "MPL-2.0"
 repository = "https://github.com/servo/webrender"
@@ -18,7 +18,7 @@ gleam = "0.2.19"
 heapsize = "0.3.6"
 offscreen_gl_context = {version = "0.4.0", features = ["serde_serialization"]}
 serde = "0.8"
-serde_macros = {version = "0.8", optional = true}
+serde_derive = {version = "0.8", optional = true}
 ipc-channel = "0.5.0"
 
 [target.x86_64-apple-darwin.dependencies]
