Change linux to unix

--- a/webrender/Cargo.toml
+++ b/webrender/Cargo.toml
@@ -26,7 +26,7 @@ rayon = "0.4.0"
 time = "0.1"
 webrender_traits = {path = "../webrender_traits", default-features = false}
 
-[target.'cfg(any(target_os = "android", target_os = "linux", target_os = "windows"))'.dependencies]
+[target.'cfg(any(target_os = "android", target_os = "windows", all(unix, not(target_os = "macos"))))'.dependencies]
 freetype = {git = "https://github.com/servo/rust-freetype"}
 
 [target.'cfg(target_os = "macos")'.dependencies]
