[sample] updated Cargo.toml

--- a/sample/Cargo.toml
+++ b/sample/Cargo.toml
@@ -4,13 +4,13 @@ version = "0.1.0"
 authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
 
 [dependencies.webrender]
-git = "https://github.com/servo/webrender"
+path = "../webrender"
 
 [dependencies.webrender_traits]
-git = "https://github.com/servo/webrender"
+path = "../webrender_traits"
 
 [dependencies]
-glutin = "*"
-gleam = "*"
-euclid = "*"
-app_units = "*"
+app_units = "0.3"
+euclid = "0.10"
+gleam = "0.2"
+glutin = "0.6"
