--- a/webrender/Cargo.toml
+++ b/webrender/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.9.0"
 authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
 license = "MPL-2.0"
 repository = "https://github.com/servo/webrender"
+build = "build.rs"
 workspace = ".."
 
 [features]
