--- a/webrender/Cargo.toml
+++ b/webrender/Cargo.toml
@@ -25,8 +25,8 @@ lazy_static = "0.2"
 log = "0.3"
 num-traits = "0.1.32"
 offscreen_gl_context = {version = "0.5", features = ["serde_serialization", "osmesa"]}
-rayon = "0.5"
 time = "0.1"
+threadpool = "1.3.2"
 webrender_traits = {path = "../webrender_traits", default-features = false}
 bitflags = "0.7"
 
