--- a/webrender_traits/Cargo.toml
+++ b/webrender_traits/Cargo.toml
@@ -23,6 +23,7 @@ offscreen_gl_context = {version = "0.5.0", features = ["serde_serialization"]}
 serde = "0.8"
 serde_derive = {version = "0.8", optional = true}
 ipc-channel = { version = "0.5.0", optional = true }
+uuid = { version = "0.3.1", features = ["v4", "serde"] }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 core-graphics = "0.4"
