--- a/webrender_traits/Cargo.toml
+++ b/webrender_traits/Cargo.toml
@@ -11,6 +11,7 @@ workspace = ".."
 default = ["codegen"]
 nightly = ["euclid/unstable", "serde/unstable"]
 codegen = ["serde_codegen", "serde_codegen/with-syntex"]
+ipc = ["ipc-channel"]
 
 [dependencies]
 app_units = "0.3.0"
@@ -21,7 +22,7 @@ heapsize = "0.3.6"
 offscreen_gl_context = {version = "0.4.5", features = ["serde_serialization"]}
 serde = "0.8"
 serde_derive = {version = "0.8", optional = true}
-ipc-channel = "0.5.0"
+ipc-channel = { version = "0.5.0", optional = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 core-graphics = "0.4"
