--- a/webrender_traits/Cargo.toml
+++ b/webrender_traits/Cargo.toml
@@ -19,7 +19,7 @@ byteorder = "0.5"
 euclid = "0.10"
 gleam = "0.2.22"
 heapsize = "0.3.6"
-offscreen_gl_context = {version = "0.4.5", features = ["serde_serialization"]}
+offscreen_gl_context = {version = "0.5.0", features = ["serde_serialization"]}
 serde = "0.8"
 serde_derive = {version = "0.8", optional = true}
 ipc-channel = { version = "0.5.0", optional = true }
@@ -28,7 +28,7 @@ ipc-channel = { version = "0.5.0", optional = true }
 core-graphics = "0.4"
 
 [target.'cfg(target_os = "windows")'.dependencies]
-dwrote = {git = "https://github.com/vvuk/dwrote-rs"}
+dwrote = "0.1.1"
 
 [build-dependencies.serde_codegen]
 version = "0.8"
