Export the servo-freetype-sys feature from webrender
While the freetype/servo-freetype-sys feature is desired by servo, it is not
desired by gecko as it needlessly pulls in a dependency on the servo-freetype-sys
library. In order to opt-out of this dependency we have to re-export it from
Webrender. We also need to re-export the codegen feature to allow opting in to
that one explicitly with default-features=false.

--- a/webrender/Cargo.toml
+++ b/webrender/Cargo.toml
@@ -8,7 +8,9 @@ build = "build.rs"
 workspace = ".."
 
 [features]
-default = ["webrender_traits/codegen"]
+default = ["codegen", "freetype-lib"]
+codegen = ["webrender_traits/codegen"]
+freetype-lib = ["freetype/servo-freetype-sys"]
 serde_derive = ["webrender_traits/serde_derive"]
 
 [dependencies]
@@ -29,7 +31,7 @@ webrender_traits = {path = "../webrender_traits", default-features = false}
 bitflags = "0.7"
 
 [target.'cfg(any(target_os = "android", all(unix, not(target_os = "macos"))))'.dependencies]
-freetype = "0.1.2"
+freetype = {version = "0.1.2", default-features = false}
 
 [target.'cfg(target_os = "windows")'.dependencies]
 dwrote = "0.1.1"
