--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,4 @@ script:
   - (cd webrender && cargo test --verbose)
   - (cd sample && cargo test --verbose)
   - (cd replay && cargo test --verbose)
+  - (cd wrench && cargo test --verbose)
