Update Travis, Appveyor, and lock files.  Also build release with debug symbols.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,4 @@ script:
   - (cd webrender && cargo test --verbose)
   - (cd sample && cargo test --verbose)
   - (cd replay && cargo test --verbose)
+  - (cd wrench && cargo test --verbose)
