Add ipc builds to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
     packages:
       - libgles2-mesa-dev
 script:
+  - (cd webrender_traits && cargo test --verbose --features "ipc")
   - (cd webrender_traits && cargo test --verbose)
   - (cd webrender && cargo test --verbose)
   - (cd sample && cargo test --verbose)
