Add support for a bunch of new display item types to YAML
add flag to render only certain element types from YAML
Output summary stats at end of time-limited run
handle borders, box shadow, gradients in YAML
Add binary recording header before TypeId, and check for it; clean up binary replay
Fix yaml border stuff
print 10th/90th percentiles
add time prefix to resource filenames to avoid collisions
Add --play option to binary frame reader, and fix window title setting
Implement YAML clips properly
Fix StackingContext bounds to record the proper rect
Add 720p 1080p 4k size shorthand
Add support for complex clips to wrench

--- a/wrench/src/args.yaml
+++ b/wrench/src/args.yaml
@@ -4,6 +4,10 @@ author: Vladimir Vukicevic <vladimir@pobox.com>
 about: WebRender testing and debugging utility
 
 args:
+  - verbose:
+      short: v
+      long: verbose
+      help: Enable verbose display
   - debug:
       short: d
       long: debug
@@ -52,6 +56,15 @@ subcommands:
               long: queue
               help: How many frames to submit to WR ahead of time (default 1)
               takes_value: true
+          - include:
+              long: include
+              help: Include the given element type. Can be specified multiple times. (rect/image/text/glyphs/border)
+              multiple: true
+              takes_value: true
+          - watch:
+              short: w
+              long: watch
+              help: Watch the given YAML file, reloading whenever it changes
           - INPUT:
               help: The input YAML file
               required: true
@@ -65,6 +78,9 @@ subcommands:
           - skip-uploads:
               long: skip-uploads
               help: Skip re-uploads while reissuing Api messages (BROKEN)
+          - play:
+              long: play
+              help: Play entire recording through, then quit (useful with --save)
           - INPUT:
               help: The input binary file or directory
               required: true
