Add headless (osmesa) feature to wrench, run on CI.

--- a/wrench/Cargo.toml
+++ b/wrench/Cargo.toml
@@ -20,6 +20,11 @@ serde = "0.8"
 serde_json = "0.8"
 time = "0.1"
 crossbeam = "0.2"
+osmesa-sys = { version = "0.1.2", optional = true }
+osmesa-src = { git = "https://github.com/servo/osmesa-src", optional = true }
+
+[features]
+headless = [ "osmesa-sys", "osmesa-src" ]
 
 [dependencies.webrender]
 path = "../webrender"
