--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
+dist: trusty
 language: rust
+rust: stable
 os:
   - linux
   - osx
@@ -8,8 +10,15 @@ notifications:
   webhooks: http://build.servo.org:54856/travis
 addons:
   apt:
+    sources:
+      - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.8 main'
+        keyurl: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
     packages:
       - libgles2-mesa-dev
+      - llvm-3.8-dev
+      - libedit-dev
+before_install:
+  - pip install mako
 script:
   - (cd webrender_traits && cargo test --verbose --features "ipc")
   - (cd webrender_traits && cargo test --verbose)
@@ -17,3 +26,5 @@ script:
   - (cd sample && cargo test --verbose)
   - (cd replay && cargo test --verbose)
   - (cd wrench && cargo test --verbose)
+  - (cd wrench && cargo build --release --verbose --features headless)
+  - (cd wrench && python run_tests.py res/rect.yaml)
