--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,13 @@ notifications:
   webhooks: http://build.servo.org:54856/travis
 addons:
   apt:
+    sources:
+      - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.8 main'
+        keyurl: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
     packages:
       - libgles2-mesa-dev
+      - llvm-3.8
+      - llvm-3.8-dev
 before_install:
   - sudo pip install mako
 script:
