--- a/webrender/Cargo.toml
+++ b/webrender/Cargo.toml
@@ -29,6 +29,7 @@ time = "0.1"
 threadpool = "1.3.2"
 webrender_traits = {path = "../webrender_traits", default-features = false}
 bitflags = "0.7"
+gamma-lut = "0.1"
 
 [dev-dependencies]
 angle = {git = "https://github.com/servo/angle", branch = "servo"}
@@ -37,7 +38,7 @@ angle = {git = "https://github.com/servo/angle", branch = "servo"}
 freetype = { version = "0.2", default-features = false }
 
 [target.'cfg(target_os = "windows")'.dependencies]
-dwrote = "0.1.5"
+dwrote = "0.1.6"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 core-graphics = "0.5.0"
