Add initial tidy support
Currently many directories are ignored, but we can add them as we tidy
things up

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,9 @@ addons:
       - llvm-3.8-dev
       - libedit-dev
 before_install:
-  - pip install mako
+  - pip install mako servo-tidy
 script:
+  - servo-tidy
   - (cd webrender_traits && cargo test --verbose --features "ipc")
   - (cd webrender_traits && cargo test --verbose)
   - (cd webrender && cargo test --verbose)
