--- a/sample/Cargo.toml
+++ b/sample/Cargo.toml
@@ -3,6 +3,7 @@ name = "wr-sample"
 version = "0.1.0"
 authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
 workspace = ".."
+license = "MPL-2.0"
 
 [dependencies.webrender]
 path = "../webrender"
