Basic Android compatibility fixes/workaround:   - rename wr-sample to wr_sample   - avoid calling `wakeup_event_loop`   - pick `GlThenGles` version

--- a/sample/Cargo.toml
+++ b/sample/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wr-sample"
+name = "wr_sample"
 version = "0.1.0"
 authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
 workspace = ".."
