--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,6 @@
 machine:
         pre:
-                - curl -sS https://static.rust-lang.org/rustup.sh | sudo sh -- --channel=nightly
+                - curl -sS https://static.rust-lang.org/rustup.sh | sh /dev/stdin --channel=nightly
 
 test:
         override:
