--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,7 @@
 machine:
         pre:
+                - git config --global user.email mail@victorquinn.com
+                - git config --global user.name "Victor Quinn"
                 - curl -sS https://static.rust-lang.org/rustup.sh | sh /dev/stdin --channel=nightly
 
 test:
