--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,9 @@ machine:
                 - git config --global user.email mail@victorquinn.com
                 - git config --global user.name "Victor Quinn"
                 - curl -sS https://static.rust-lang.org/rustup.sh | sh /dev/stdin --channel=nightly
+checkout:
+        post:
+                - git config --global --unset url.ssh://git@github.com:.insteadof
 
 test:
         override:
