Have scroll layers clip instead of stacking contexts
This is another step on the path to make clipping totally independent
of stacking contexts in order to have contents of the same stacking
contents clipped by different scrolling roots. As part of this change,
scrolling roots are integrated into the frame builder's primitive run
commands.

--- a/wrench/reftests/mask/aligned-layer-rect.yaml
+++ b/wrench/reftests/mask/aligned-layer-rect.yaml
@@ -2,14 +2,16 @@
 root:
   items:
     - 
-      type: stacking_context
+      type: scroll_layer
       bounds: [0, 0, 95, 88]
+      content-size: [95, 88]
       clip:
         rect: [9, 9, 10, 10]
       items:
         - 
-          type: stacking_context
+          type: scroll_layer
           bounds: [0, 0, 95, 88]
+          content-size: [95, 88]
           clip:
               rect: [0, 0, 100, 100]
           items:
