--- a/wrench/reftests/mask/nested-mask.yaml
+++ b/wrench/reftests/mask/nested-mask.yaml
@@ -2,8 +2,9 @@
 root:
   items:
     - 
-      type: stacking_context
+      type: scroll_layer
       bounds: [0, 0, 95, 88]
+      content-size: [95, 88]
       clip:
         image_mask:
           image: "mask.png"
@@ -12,8 +13,9 @@ root:
         rect: [0, 0, 95, 88]
       items:
         - 
-          type: stacking_context
+          type: scroll_layer
           bounds: [0, 0, 95, 88]
+          content-size: [95, 88]
           clip:
             image_mask:
               image: "mask.png"
