--- a/wrench/Cargo.toml
+++ b/wrench/Cargo.toml
@@ -36,5 +36,5 @@ default_features = false
 [target.'cfg(target_os = "windows")'.dependencies]
 dwrote = "0.1.2"
 
-[target.'cfg(target_os = "linux")'.dependencies]
-font-loader = "0.1.0"
+[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
+font-loader = "0.1.4"
