Allow specifying a reftest to run in wrench

--- a/wrench/src/args.yaml
+++ b/wrench/src/args.yaml
@@ -91,3 +91,8 @@ subcommands:
               index: 1
     - reftest:
         about: run reftests
+        args:
+          - REFTEST:
+              help: a specific reftest or directory to run
+              required: false
+              index: 1
