Tidy up wrench and have tidy process it

--- a/servo-tidy.toml
+++ b/servo-tidy.toml
@@ -8,9 +8,10 @@ skip-check-licenses = false
 files = [
     # servo-tidy does not properly support workspaces yet.
     "./Cargo.toml",
-    # There are many duplicated packages, which we probably need to review
-    # one by one.
-    "./Cargo.lock"
+    # There are many duplicated packages, which we probably need to review one by one.
+    "./Cargo.lock",
+    # We need to ensure that tidy's suggested options are okay for this script.
+    "./wrench/test.sh",
 ]
 
 # Many directories are currently ignored while we tidy things up
@@ -19,5 +20,4 @@ directories = [
    # Generated and upstream code combined with our own. Could use cleanup
   "./target",
   "./webrender",
-  "./wrench",
 ]
