--- a/wrench/Cargo.toml
+++ b/wrench/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.1"
 authors = ["Vladimir Vukicevic <vladimir@pobox.com>"]
 build = "build.rs"
 workspace = ".."
+license = "MPL-2.0"
 
 [dependencies]
 base64 = "0.3"
