--- a/wrench/Cargo.toml
+++ b/wrench/Cargo.toml
@@ -1,23 +1,23 @@
 [package]
 name = "wrench"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["Vladimir Vukicevic <vladimir@pobox.com>"]
 build = "build.rs"
 license = "MPL-2.0"
 
 [dependencies]
 base64 = "0.3"
-bincode = "0.6"
+bincode = "1.0.0-alpha2"
 byteorder = "1.0"
-euclid = "0.10"
+euclid = "0.11"
 gleam = "0.2"
 glutin = "0.7"
-app_units = "0.3"
+app_units = "0.4"
 image = "0.12"
 clap = { version = "2", features = ["yaml"] }
 lazy_static = "0.2"
 yaml-rust = { git = "https://github.com/vvuk/yaml-rust", features = ["preserve_order"] }
-serde_json = "0.8"
+serde_json = "0.9"
 time = "0.1"
 crossbeam = "0.2"
 osmesa-sys = { version = "0.1.2", optional = true }
@@ -34,7 +34,7 @@ path = "../webrender_traits"
 default_features = false
 
 [target.'cfg(target_os = "windows")'.dependencies]
-dwrote = "0.1.2"
+dwrote = {git = "https://github.com/servo/dwrote-rs.git", rev = "servo"}
 
 [target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
 font-loader = "0.1.4"
