--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ script:
   - (cd webrender_traits && cargo test --verbose)
   - (cd webrender && cargo test --verbose)
   - (cd sample && cargo test --verbose)
+  - (cd sample && cargo build --verbose --features=profiler)
   - (cd wrench && cargo test --verbose)
   - (cd wrench && cargo build --release --verbose --features headless)
   - (cd wrench && python run_tests.py res/rect.yaml)
