Use the preserve_order feature of rust-yaml
This improves the output from the yaml writer because the fields
are not sorted alphabetically. e.g. 'type' is not at the bottom.

--- a/wrench/Cargo.toml
+++ b/wrench/Cargo.toml
@@ -16,7 +16,7 @@ app_units = "0.3"
 image = "0.12"
 clap = { version = "2", features = ["yaml"] }
 lazy_static = "0.2"
-yaml-rust = { git = "https://github.com/vvuk/yaml-rust" }
+yaml-rust = { git = "https://github.com/vvuk/yaml-rust", features = ["preserve_order"] }
 serde_json = "0.8"
 time = "0.1"
 crossbeam = "0.2"
