--- a/webrender_traits/Cargo.toml
+++ b/webrender_traits/Cargo.toml
@@ -27,7 +27,7 @@ serde_derive = {version = "0.9", optional = true}
 core-graphics = "0.7"
 
 [target.'cfg(target_os = "windows")'.dependencies]
-dwrote = {git = "https://github.com/servo/dwrote-rs.git", rev = "servo"}
+servo-dwrote = "0.2"
 
 [build-dependencies.serde_codegen]
 version = "0.9"
