--- a/wrench/Cargo.toml
+++ b/wrench/Cargo.toml
@@ -34,7 +34,7 @@ path = "../webrender_traits"
 default_features = false
 
 [target.'cfg(target_os = "windows")'.dependencies]
-dwrote = {git = "https://github.com/servo/dwrote-rs.git", rev = "servo"}
+servo-dwrote = "0.2"
 
 [target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
 font-loader = "0.1.4"
