--- a/webrender_traits/Cargo.toml
+++ b/webrender_traits/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "webrender_traits"
-version = "0.20.0"
+version = "0.21.0"
 authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
 license = "MPL-2.0"
 repository = "https://github.com/servo/webrender"
@@ -27,7 +27,7 @@ serde_derive = {version = "0.9", optional = true}
 core-graphics = "0.7"
 
 [target.'cfg(target_os = "windows")'.dependencies]
-servo-dwrote = "0.2"
+dwrote = "0.2"
 
 [build-dependencies.serde_codegen]
 version = "0.9"
