--- a/wrench/Cargo.toml
+++ b/wrench/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wrench"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Vladimir Vukicevic <vladimir@pobox.com>"]
 build = "build.rs"
 license = "MPL-2.0"
@@ -34,7 +34,7 @@ path = "../webrender_traits"
 default_features = false
 
 [target.'cfg(target_os = "windows")'.dependencies]
-servo-dwrote = "0.2"
+dwrote = "0.2"
 
 [target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
 font-loader = "0.1.4"
